Started and finished hero section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
   <script src="https://kit.fontawesome.com/1d29cd001d.js" crossorigin="anonymous"></script>
 
+  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+
   <title>Frontend Mentor | [Blogr]</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -39,38 +41,42 @@
 <body>
   <section>
     <div class="hero">
+      <div class="hero-background"></div>
       <header>
-        <div>
+        <div class="left-header-container">
           <div>
             <img src="/images/logo.svg" alt="">
           </div>
-          <div>
+          <div class="navigation-list">
             <div>
               <p>Product</p>
-              <i class="fa-solid fa-chevron-down"></i>
+              <i class="fa fa-chevron-down"></i>
+              <!-- <i class="fa-solid fa-chevron-down"></i> -->
             </div>
             <div>
               <p>Company</p>
-              <i class="fa-solid fa-chevron-down"></i>
+              <i class="fa fa-chevron-down"></i>
+              <!-- <i class="fa-solid fa-chevron-down"></i> -->
             </div>
             <div>
               <p>Connect</p>
-              <i class="fa-solid fa-chevron-down"></i>
+              <i class="fa fa-chevron-down"></i>
+              <!-- <i class="fa-solid fa-chevron-down"></i> -->
             </div>
           </div>
         </div>
 
-        <div>
-          <button>Login</button>
-          <button>Sign Up</button>
+        <div class="right-header-container">
+          <button id="login">Login</button>
+          <button id="signup">Sign Up</button>
         </div>
       </header>
       <div class="hero-writeup">
         <h1>A modern publishing platform</h1>
         <p>Grow your audience and build your online brand</p>
         <div class="hero-buttons">
-          <button>Start for Free</button>
-          <button>Learn More</button>
+          <button id="start-for-free">Start for Free</button>
+          <button id="learn-more">Learn More</button>
         </div>
       </div>
     </div>
@@ -177,6 +183,17 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+
+  <div class="testing">
+    <div class="one"></div>
+    <div class="two"></div>
+    <div class="three"></div>
+    <div class="four"></div>
+    <div class="five"></div>
+    <div class="six"></div>
+    <div class="seven"></div>
+    <div class="eight"></div>
+  </div>
 </body>
 
 </html>
