--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     </div>
 
     <div class="second-div">
+      <div class="second-div-background"></div>
       <h1>Designed for the future</h1>
       <div class="second-div-writeup">
         <div>
