--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 
-  <script src="https://kit.fontawesome.com/1d29cd001d.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/1d29cd001d.js" crossorigin="anonymous"></script> -->
 
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
@@ -83,8 +83,10 @@
 
     <div class="second-div-background"></div>
 
+
+
     <div class="second-div">
-      
+
       <h1>Designed for the future</h1>
       <div class="second-div-writeup">
         <div>
@@ -103,7 +105,9 @@
       </div>
     </div>
 
+
     <div class="third-div">
+      <div class="third-div-background"></div>
       <div class="third-div-writeup">
         <h1>State of the Art Infrastructure</h1>
         <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
@@ -112,20 +116,34 @@
       </div>
     </div>
 
+    </div>
+
+    <div class="third-div-image">
+      <img src="images/illustration-phones.svg" alt="">
+    </div>
+
     <div class="fourth-div">
-      <div class="fourth-div-writeup">
-        <div>
-          <h1>Free, open, simple</h1>
-          <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports
-            features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting
-            tools,
-            and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+      <div class="fourth-div-writeup-container">
+        <div class="fourth-div-writeup">
+          <div>
+            <h1>Free, open, simple</h1>
+            <p>Blogr is a free and open source application backed by a large community of helpful developers. It
+              supports
+              features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting
+              tools,
+              and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+          </div>
+          <div>
+            <h1>Powerful tooling</h1>
+            <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and
+              deployment
+              a breeze,
+              but capable of producing even the most complicated sites.</p>
+          </div>
         </div>
-        <div>
-          <h1>Powerful tooling</h1>
-          <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment
-            a breeze,
-            but capable of producing even the most complicated sites.</p>
+
+        <div class="fourth-div-image">
+          <img src="images/illustration-laptop-desktop.svg" alt="">
         </div>
       </div>
     </div>
@@ -134,29 +152,35 @@
       <div>
         <img src="/images/footer-logo.png" alt="">
       </div>
-      <div>
+      <div class="footer-list">
         <div>
           <h1>Product</h1>
-          <p>Overview</p>
-          <p>Pricing</p>
-          <p>Marketplace</p>
-          <p>Features</p>
-          <p>Integrations</p>
+          <ul>
+            <li>Overview</li>
+            <li>Pricing</li>
+            <li>Marketplace</li>
+            <li>Features</li>
+            <li>Integrations</li>
+          </ul>
         </div>
 
         <div>
           <h1>Company</h1>
-          <p>About</p>
-          <p>Team</p>
-          <p>Blog</p>
-          <p>Careers</p>
+          <ul>
+            <li>About</li>
+            <li>Team</li>
+            <li>Blog</li>
+            <li>Careers</li>
+          </ul>
         </div>
 
         <div>
           <h1>Connect</h1>
-          <p>Contact</p>
-          <p>Newsletter</p>
-          <p>LinkedIn</p>
+          <ul>
+            <li>Contact</li>
+            <li>Newsletter</li>
+            <li>LinkedIn</li>
+          </ul>
         </div>
       </div>
     </footer>
