--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
         </div>
 
         <div class="fourth-div-image">
-          <img src="images/illustration-laptop-desktop.svg" alt="">
+          <img class="laptop-desktop" src="images/illustration-laptop-desktop.svg" alt="">
+          <img class="laptop-mobile" src="images/illustration-laptop-mobile.svg" alt="">
         </div>
       </div>
     </div>
@@ -246,17 +247,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-
-  <div class="testing">
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
-    <div class="four"></div>
-    <div class="five"></div>
-    <div class="six"></div>
-    <div class="seven"></div>
-    <div class="eight"></div>
-  </div>
 
   <script src="script.js"></script>
 </body>
